[package]
name = "rust-libp2p-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.52", features = [
    "tcp",
    "tls",
    "dns",
    "async-std",
    "noise",
    "yamux",
    "websocket",
    "ping",
    "macros",
] }
futures = "0.3.21"
async-std = { version = "1.12.0", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
