[package]
name = "rust-libp2p-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.52", features = [
    "tcp",
    "tls",
    "dns",
    "async-std",
    "noise",
    "yamux",
    "websocket",
    "ping",
    "macros",
] }
futures = "0.3.21"
tokio = { version = "1.32.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
